<resources>
    <string name="app_name">Yosa</string>
    <string name="onboard_picture">Onboard Picture</string>
    <string name="title_1">Detect your pose</string>
    <string name="title_2">Various Poses and Levels</string>
    <string name="title_3">Welcome to Yosa</string>
    <string name="description_1">Check all your poses from \ndifferent angles using camera</string>
    <string name="description_2">We categorized poses that fit user\'s preference level</string>
    <string name="description_3">Start your yoga experience now</string>
    <string name="get_started">Get Started</string>
    <string name="title_home">Select Your \nDifficulty Level!</string>
    <string name="search">Find your pose</string>
    <string name="description_level">Yoga Level: Beginner or Intermediate</string>

    <string-array name="data_level">
        <item>Beginner</item>
        <item>Intermediate</item>
    </string-array>

    <integer-array name="data_photo">
        <item>@drawable/ic_beginnerimg</item>
        <item>@drawable/ic_intermediateimg</item>
    </integer-array>

    <string name="title_activity_pose_detail">PoseDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="play_button">play_button</string>
    <string name="pause_button">pause_button</string>
    <string name="stop_button">stop_button</string>
    <string name="settings">settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Pose Info</string>
    <string name="tab_text_2">Pose Detection</string>
    <string name="img_desc_pose">Pose Picture</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="pose_name">Pose Name</string>
</resources>