<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_onboard_scene"
    tools:context=".ui.onboarding.OnboardActivity">
    <ImageView
        android:id="@+id/imgOnboard1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/onboard_picture"
        android:src="@drawable/onboard_meditate"
        app:layout_constraintBottom_toTopOf="@id/tvTitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha="0" />

    <TextView
        android:id="@+id/tvTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/title_1"
        android:textColor="@color/blue_main"
        android:textSize="37sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgOnboard1"
        android:alpha="0" />

    <TextView
        android:id="@+id/tvDescription1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/description_1"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle1"
        android:alpha="0" />

    <ImageView
        android:id="@+id/imgOnboard2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/onboard_picture"
        android:src="@drawable/onboard_many"
        app:layout_constraintBottom_toTopOf="@id/tvTitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha="0" />

    <TextView
        android:id="@+id/tvTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:alpha="0"
        android:gravity="center"
        android:text="@string/title_2"
        android:textColor="@color/blue_main"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgOnboard2" />

    <TextView
        android:id="@+id/tvDescription2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/description_2"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle2"
        android:alpha="0" />

    <ImageView
        android:id="@+id/imgOnboard3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/onboard_picture"
        android:src="@drawable/onboard_yosa"
        app:layout_constraintBottom_toTopOf="@id/tvTitle3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha="0" />

    <TextView
        android:id="@+id/tvTitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/title_3"
        android:textColor="@color/blue_main"
        android:textSize="37sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgOnboard3"
        android:alpha="0" />

    <TextView
        android:id="@+id/tvDescription3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/description_3"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle3"
        android:alpha="0" />

    <Button
        android:id="@+id/btn_to_home"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/background_button"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/logo_circle_2"
        app:layout_constraintStart_toEndOf="parent"
        android:alpha="0" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/logo_circle_1"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="65dp"
        android:alpha="0"
        android:src="@drawable/circle_stroke"
        app:altSrc="@drawable/circle_full"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/logo_circle_2" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/logo_circle_2"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginBottom="65dp"
        android:alpha="0"
        android:src="@drawable/circle_stroke"
        app:altSrc="@drawable/circle_full"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/logo_circle_3"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="65dp"
        android:alpha="0"
        android:src="@drawable/circle_stroke"
        app:altSrc="@drawable/circle_full"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logo_circle_2" />

</androidx.constraintlayout.motion.widget.MotionLayout>